# ebdaa-event-system

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  commands.py  decorators.py  errors.py  extensions.py
app/models/: __init__.py  admin.py  attendance.py  time_slot.py  user.py  visitor.py
app/routes/: attendance.py  auth.py  dashboard.py  main.py  users.py  visitors.py
app/schemas/: __init__.py  admin.py  attendance.py  response.py  time_slot.py  user.py  visitor.py
app/static/css/: style.css
app/static/js/: attendance.js  auth.js  checkin.js  dashboard.js  login.js  register.js  users.js
app/templates/: base.html  landing.html  login.html  register.html
app/templates/admin/: attendance.html  base_admin.html  checkin.html  dashboard.html  users.html
migrations/versions/: 5a5e5cd68f27_initial_migration.py
tests/: conftest.py  test_attendance.py  test_auth.py  test_dashboard.py  test_users.py  test_visitors.py
